# grocy_p4_esp32_terminal

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig.projbuild  README.md  build.sh  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
main/board/: board_init.c  board_init.h  board_pins.h  esp_lcd_jd9165.c  esp_lcd_jd9165.h
main/camera/: cam_presence.c  cam_presence.h
main/common/: config.c  config.h  event_bus.c  event_bus.h  psram_alloc.h
main/grocy/: grocy_client.c  grocy_client.h  grocy_image_cache.c  grocy_image_cache.h  grocy_task.c  grocy_task.h
main/ota/: ota_manifest.c  ota_manifest.h  ota_task.c  ota_task.h
main/screen/: screen_ctrl.c  screen_ctrl.h
main/ui/: lv_font_montserrat_14_latin_ext.c  ui_main.c  ui_main.h  ui_product_cell.c  ui_product_cell.h  ui_setup.c  ui_setup.h
main/wifi/: grocy_mqtt.c  grocy_mqtt.h  mqtt_client.c  mqtt_events.c  mqtt_events.h  mqtt_log.c  mqtt_log.h  wifi_manager.c  wifi_manager.h
test_app/: CMakeLists.txt  sdkconfig.defaults
test_app/main/: CMakeLists.txt  Kconfig.projbuild  test_config.c  test_grocy_json.c  test_ota_semver.c  test_runner.c
